// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`timezone helper baseline convertToTimeZoneISO — local wall clock to UTC instant America/Santiago 1`] = `
{
  "missingDate": "",
  "missingZone": "",
  "summer": "2026-07-15T13:30:00.000Z",
  "winter": "2026-01-15T12:30:00.000Z",
}
`;

exports[`timezone helper baseline convertToTimeZoneISO — local wall clock to UTC instant Europe/Brussels 1`] = `
{
  "missingDate": "",
  "missingZone": "",
  "summer": "2026-07-15T07:30:00.000Z",
  "winter": "2026-01-15T08:30:00.000Z",
}
`;

exports[`timezone helper baseline convertToTimeZoneISO — local wall clock to UTC instant UTC 1`] = `
{
  "missingDate": "",
  "missingZone": "",
  "summer": "2026-07-15T09:30:00.000Z",
  "winter": "2026-01-15T09:30:00.000Z",
}
`;

exports[`timezone helper baseline getDateInTimezone — instant to a local-parts Date America/Santiago 1`] = `
{
  "chileDst": "2026-09-06T02:00:00.000Z",
  "euDstFallBack": "2026-10-24T21:30:00.000Z",
  "euDstSpringForward": "2026-03-28T22:30:00.000Z",
  "ordinary": "2026-03-22T11:30:00.000Z",
  "yearBoundaryDec31": "2025-12-31T20:30:00.000Z",
}
`;

exports[`timezone helper baseline getDateInTimezone — instant to a local-parts Date Europe/Brussels 1`] = `
{
  "chileDst": "2026-09-06T07:00:00.000Z",
  "euDstFallBack": "2026-10-25T02:30:00.000Z",
  "euDstSpringForward": "2026-03-29T03:30:00.000Z",
  "ordinary": "2026-03-22T15:30:00.000Z",
  "yearBoundaryDec31": "2026-01-01T00:30:00.000Z",
}
`;

exports[`timezone helper baseline getDateInTimezone — instant to a local-parts Date UTC 1`] = `
{
  "chileDst": "2026-09-06T05:00:00.000Z",
  "euDstFallBack": "2026-10-25T00:30:00.000Z",
  "euDstSpringForward": "2026-03-29T01:30:00.000Z",
  "ordinary": "2026-03-22T14:30:00.000Z",
  "yearBoundaryDec31": "2025-12-31T23:30:00.000Z",
}
`;

exports[`timezone helper baseline getEventDateString — renders in the VIEWER timezone event spanning midnight in the viewer zone 1`] = `"December 31, 2025 11:00 PM - January 1, 2026 1:00 AM UTC"`;

exports[`timezone helper baseline getEventDateString — renders in the VIEWER timezone multi-day event 1`] = `"March 22, 2026 2:30 PM - March 24, 2026 4:00 PM UTC"`;

exports[`timezone helper baseline getEventDateString — renders in the VIEWER timezone same-day event 1`] = `"March 22, 2026 • 2:30 PM - 4:00 PM UTC"`;

exports[`timezone helper baseline getGmtOffset — explicit zone argument America/Santiago across DST 1`] = `
{
  "selected": "-04:00",
  "summer": "-04:00",
  "undefinedZone": "",
  "winter": "-03:00",
}
`;

exports[`timezone helper baseline getGmtOffset — explicit zone argument Europe/Brussels across DST 1`] = `
{
  "selected": "+02:00",
  "summer": "+02:00",
  "undefinedZone": "",
  "winter": "+01:00",
}
`;

exports[`timezone helper baseline getGmtOffset — explicit zone argument UTC across DST 1`] = `
{
  "selected": "+00:00",
  "summer": "+00:00",
  "undefinedZone": "",
  "winter": "+00:00",
}
`;

exports[`timezone helper baseline getPeriodRemainingUntil — diff from midnight in the given zone America/Santiago 1`] = `
{
  "acrossDst": 45,
  "days": 21,
  "months": 3,
  "pastDate": -28,
  "weeks": 3,
}
`;

exports[`timezone helper baseline getPeriodRemainingUntil — diff from midnight in the given zone Europe/Brussels 1`] = `
{
  "acrossDst": 45,
  "days": 21,
  "months": 3,
  "pastDate": -28,
  "weeks": 3,
}
`;

exports[`timezone helper baseline getPeriodRemainingUntil — diff from midnight in the given zone UTC 1`] = `
{
  "acrossDst": 45,
  "days": 21,
  "months": 3,
  "pastDate": -28,
  "weeks": 3,
}
`;
